<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/venue_conference_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/venue_conference"
            tools:layout_height="180dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Venue.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_conference_title"/>

            <TextView
                style="@style/Venue.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_conference_address"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_conference_info"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/venue_conference_locate"
            style="@style/Venue.Button"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@string/venue_see_location"
            android:theme="@style/AppTheme.AccentButton"/>
    </LinearLayout>
</ScrollView>
